<resources>
    <string name="txtcontejemplo" translatable="false">There is only darkness for you, and only death for your people. These ancients are just the beginning. I will command a great and terrible army... and we will sail to a billion worlds. We will sail until every light has been extinguished. You are strong, child. But I am beyond strength. I am the end... And I have come for you, Finn."</string>
    <string name="txt_tarjCont">Lo escaneado es una tarjeta de contacto</string>
    <string name="txt_envEmail">Lo escaneado es un envío de email</string>
    <string name="txt_noWeb">Lo escaneado no es un QR a una web</string>
    <string name="avisoUrl">Recuerda poner el http/https si es una URL para una mejor compatibilidad</string>
    <string name="avisoVcard">Recuerda que debes introducir un nombre y un método de contacto como mínimo</string>
    <string name="avisoEmail">Recuerda que el destinatario es el email al que llegará el correo, el remitente será la persona que escanee tu código</string>
    <string name="btn_guardaqr">¡Guarda mi QR!</string>
    <string name="mens_QR_gen_bien">Tu QR generado (%1$s) se ha guarado con éxito en la carpeta QrsGen dentro de imágenes</string>
    <string name="mens_guardaQR">¿Deseas guardar la imagen de tu QR generado?</string>
    <string name="btn_mens_guardar">Guardar</string>
    <string name="btn_mens_cancelar">Cancelar</string>
    <string name="btn_gen_main">¡O genera tu propio QR!</string>
    <string name="btn_scan_main">¡Pulsa para escanear!</string>
    <string name="promp_scanQR">Escanea el QR</string>
    <string name="toastCreandoQR">Creando su QR...</string>
    <string name="avisoNomail">No puede haber un campo vacío, introduce algún valor</string>
    <string name="avisoNotelf">Debes introducir como mínimo, un nombre y un teléfono válido</string>
    <string name="avisoNoweb">El campo está vacío, introduce algún valor</string>
    <string name="txt_rburl">" Texto/url: "</string>
    <string name="txt_rbdcontact"> Tarjeta contacto</string>
    <string name="txt_rbdmail"> Recibir email</string>
    <string name="txt_infUrl">" Pon aquí tu texto o URL: "</string>
    <string name="hint_web" translatable="false">http://www.miweb.com</string>
    <string name="txt_infNom">" Nombre: "</string>
    <string name="hint_nom">Juan Carmelo</string>
    <string name="txt_infApell">" Apellidos: "</string>
    <string name="hint_apell">Cotones Frescos-Robados</string>
    <string name="txt_infTelf">" Teléfono: "</string>
    <string name="hint_telf">651013555</string>
    <string name="txt_infMail" translatable="false">" Email: "</string>
    <string name="hint_mail" translatable="false">ejemplo@empresa.com</string>
    <string name="txt_infWeb">" Página web: "</string>
    <string name="txt_infEmp">" Empresa: "</string>
    <string name="hint_emp" translatable="false">Avaricio S.A.</string>
    <string name="txt_infNot">" Notas adicionales: </string>
    <string name="hint_nota">Añade aquí cualquier otra cosa extra del contacto</string>
    <string name="txt_infDestin">" Destinatario: "</string>
    <string name="txt_infAsunto">" Asunto: "</string>
    <string name="txt_infCuerpo">" Cuerpo del mensaje (contenido): "</string>
    <string name="hint_content">Aquí el contenido del email, puedes poner un mensaje que aporte contexto o algo genérico si te vale con el asunto</string>
    <string name="hint_asunto">Incidencia con X producto</string>
    <string name="btn_gen">¡Genera!</string>
    <string name="btn_borrar">BORRAR</string>
    <string name="avisoBorra">Se borrará todo el contenido, ¿estás seguro?</string>
    <string name="borra">Borrar</string>
    <string name="cancel">Cancelar</string>
    <string name="sup_infoQR">Contenido del QR:</string>
    <string name="app_name">FacilQR</string>
</resources>