<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreaQR">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/rbdgroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbdUrlTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_rburl"/>

            <RadioButton
                android:id="@+id/rbdVcard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_rbdcontact" />

            <RadioButton
                android:id="@+id/rbdEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_rbdmail" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layTxturl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#80FFF3F3"
        android:visibility="visible">

        <TextView
            android:id="@+id/lbltxturl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txt_infUrl" />

        <EditText
            android:id="@+id/txturltxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_web"
            android:inputType="text"
            android:maxLength="2000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layVcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#80F2FFDC"
        android:visibility="gone"
        tools:visibility="visible">


        <TextView
            android:id="@+id/lblnom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_infNom" />

        <EditText
            android:id="@+id/txtnom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_nom" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/lblapell"
            android:text="@string/txt_infApell"/>

        <EditText
            android:id="@+id/txtapell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_apell" />

        <TextView
            android:id="@+id/lblTelf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_infTelf" />

        <EditText
            android:id="@+id/txttelf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/hint_telf" />

        <TextView
            android:id="@+id/lblemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_infMail" />

        <EditText
            android:id="@+id/txtmailvcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_mail" />

        <TextView
            android:id="@+id/lblweb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_infWeb" />

        <EditText
            android:id="@+id/txtweb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_web" />

        <TextView
            android:id="@+id/lblempresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_infEmp" />

        <EditText
            android:id="@+id/txtempresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_emp" />

        <TextView
            android:id="@+id/lblnot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_infNot" />

        <EditText
            android:id="@+id/txtnot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_nota"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#80DCFAFF"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/lblDest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_infDestin" />

        <EditText
            android:id="@+id/txtdestin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_mail" />

        <TextView
            android:id="@+id/lblAsun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_infAsunto" />

        <EditText
            android:id="@+id/txtasunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_asunto" />

        <TextView
            android:id="@+id/lblCont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_infCuerpo" />

        <EditText
            android:id="@+id/txtconten"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:textAlignment="center"
            android:ems="10"
            android:hint="@string/hint_content"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <TextView
        android:background="#FFFF00"
        android:id="@+id/lblaviso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/avisoUrl" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btngeneraQR"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F0F0F0"
            android:foreground="#2359FF00"
            android:layout_weight="1"
            android:textSize="40dp"
            android:textColor="#000000"
            android:text="@string/btn_gen" />

        <Button
            android:id="@+id/btndelet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:backgroundTint="#A3FF0000"
            app:cornerRadius="0dp"
            android:textColor="#FFE643"
            android:text="@string/btn_borrar" />
    </LinearLayout>

</LinearLayout>